Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -569,7 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "near_charles = df."
+    "near_charles = df.iloc[df['chas']]"
    ]
   }
  ],
