Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -565,26 +565,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NotImplementedError",
-     "evalue": "iLocation based boolean indexing on an integer type is not available",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-8f1525941160>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnear_charles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'chas'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mnear_charles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1476\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1477\u001b[0m             \u001b[0mmaybe_callable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_apply_if_callable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1478\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmaybe_callable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1479\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1480\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_is_scalar_access\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_getitem_axis\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   2084\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2085\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_bool_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2086\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_key\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2087\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getbool_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2088\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_validate_key\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1945\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'index'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1946\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minferred_type\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'integer'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1947\u001b[0;31m                     raise NotImplementedError(\"iLocation based boolean \"\n\u001b[0m\u001b[1;32m   1948\u001b[0m                                               \u001b[0;34m\"indexing on an integer type \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1949\u001b[0m                                               \"is not available\")\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: iLocation based boolean indexing on an integer type is not available"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>crim</th>\n",
+       "      <th>zn</th>\n",
+       "      <th>indus</th>\n",
+       "      <th>chas</th>\n",
+       "      <th>nox</th>\n",
+       "      <th>rm</th>\n",
+       "      <th>age</th>\n",
+       "      <th>dis</th>\n",
+       "      <th>rad</th>\n",
+       "      <th>tax</th>\n",
+       "      <th>ptratio</th>\n",
+       "      <th>black</th>\n",
+       "      <th>lstat</th>\n",
+       "      <th>medv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>143</td>\n",
+       "      <td>3.32105</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19.58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.871</td>\n",
+       "      <td>5.403</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.3216</td>\n",
+       "      <td>5</td>\n",
+       "      <td>403</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>396.90</td>\n",
+       "      <td>26.82</td>\n",
+       "      <td>13.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>155</td>\n",
+       "      <td>1.41385</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19.58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.871</td>\n",
+       "      <td>6.129</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>1.7494</td>\n",
+       "      <td>5</td>\n",
+       "      <td>403</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>321.02</td>\n",
+       "      <td>15.12</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>161</td>\n",
+       "      <td>1.27346</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19.58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.605</td>\n",
+       "      <td>6.250</td>\n",
+       "      <td>92.6</td>\n",
+       "      <td>1.7984</td>\n",
+       "      <td>5</td>\n",
+       "      <td>403</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>338.92</td>\n",
+       "      <td>5.50</td>\n",
+       "      <td>27.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>164</td>\n",
+       "      <td>1.51902</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19.58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.605</td>\n",
+       "      <td>8.375</td>\n",
+       "      <td>93.9</td>\n",
+       "      <td>2.1620</td>\n",
+       "      <td>5</td>\n",
+       "      <td>403</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>388.45</td>\n",
+       "      <td>3.32</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>209</td>\n",
+       "      <td>0.13587</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.59</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.489</td>\n",
+       "      <td>6.064</td>\n",
+       "      <td>59.1</td>\n",
+       "      <td>4.2392</td>\n",
+       "      <td>4</td>\n",
+       "      <td>277</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>381.32</td>\n",
+       "      <td>14.66</td>\n",
+       "      <td>24.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID     crim   zn  indus  chas    nox     rm    age     dis  rad  tax  \\\n",
+       "97   143  3.32105  0.0  19.58     1  0.871  5.403  100.0  1.3216    5  403   \n",
+       "104  155  1.41385  0.0  19.58     1  0.871  6.129   96.0  1.7494    5  403   \n",
+       "108  161  1.27346  0.0  19.58     1  0.605  6.250   92.6  1.7984    5  403   \n",
+       "110  164  1.51902  0.0  19.58     1  0.605  8.375   93.9  2.1620    5  403   \n",
+       "145  209  0.13587  0.0  10.59     1  0.489  6.064   59.1  4.2392    4  277   \n",
+       "\n",
+       "     ptratio   black  lstat  medv  \n",
+       "97      14.7  396.90  26.82  13.4  \n",
+       "104     14.7  321.02  15.12  17.0  \n",
+       "108     14.7  338.92   5.50  27.0  \n",
+       "110     14.7  388.45   3.32  50.0  \n",
+       "145     18.6  381.32  14.66  24.4  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "near_charles = df.iloc[df['chas'] == 1]\n",
+    "near_charles = df.loc[df['chas'] == 1]\n",
     "near_charles.head()"
    ]
   },
