Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -729,11 +729,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "age_room = near_charles.ilo[]"
+    "age_room = near_charles.iloc[:, 6:7]"
    ]
   },
   {
