--- a/index.ipynb
+++ b/index.ipynb
@@ -802,8 +802,9 @@
     }
    ],
    "source": [
-    "age_room = near_charles.iloc[:,6:8]\n",
-    "age_room.head()"
+    "charles_age_room = near_charles.iloc[:,6:8]\n",
+    "charles_age_room.head()\n",
+    "\n"
    ]
   },
   {
