Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -804,7 +804,7 @@
    "source": [
     "charles_age_room = near_charles.iloc[:,6:8]\n",
     "charles_age_room.head()\n",
-    "\n"
+    "charles_age_room.plt.\n"
    ]
   },
   {
