--- a/index.ipynb
+++ b/index.ipynb
@@ -766,7 +766,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "not_near_charles = "
+   ]
   }
  ],
  "metadata": {
