Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -930,7 +930,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "not_charles_room_age = not_near_charles"
+   ]
   }
  ],
  "metadata": {
