Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -927,12 +927,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "not_charles_room_age = not_near_charles"
+    "not_charles_room_age = not_near_charles.iloc[:,6:8]\n",
+    "not"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
