--- a/index.ipynb
+++ b/index.ipynb
@@ -763,11 +763,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "rm     20\n",
+       "age    20\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "charles_age_room"
+    "charles_age_room.count()"
    ]
   },
   {
