--- a/index.ipynb
+++ b/index.ipynb
@@ -1108,7 +1108,9 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "df.dis.plot.hit"
+   ]
   },
   {
    "cell_type": "code",
