Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1110,7 +1110,7 @@
    ],
    "source": [
     "df.dis.hist()\n",
-    "df."
+    "plt.title('Distance from 5 Boston Employment Center')"
    ]
   },
   {
