Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1110,7 +1110,8 @@
    ],
    "source": [
     "df.dis.hist()\n",
-    "plt.title('Distance from 5 Boston Employment Center')"
+    "plt.title('Distance from 5 Boston Employment Center')\n",
+    "plt.xlabel('')"
    ]
   },
   {
