--- a/index.ipynb
+++ b/index.ipynb
@@ -1111,7 +1111,7 @@
    "source": [
     "df.dis.hist()\n",
     "plt.title('Distance from 5 Boston Employment Center')\n",
-    "plt.xlabel('')"
+    "plt.xlabel(')"
    ]
   },
   {
