--- a/index.ipynb
+++ b/index.ipynb
@@ -758,7 +758,8 @@
    "source": [
     "charles_age_room = near_charles.iloc[:,6:8]\n",
     "charles_age_room.head()\n",
-    "charles_age_room.plot(kind = 'barh')\n"
+    "charles_age_room.plot(kind = 'barh')\n",
+    "plt.xticks= range(len(ch))\n"
    ]
   },
   {
