Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -758,7 +758,8 @@
    "source": [
     "charles_age_room = near_charles.iloc[:,6:8]\n",
     "charles_age_room.head()\n",
-    "charles_age_room.plot(kind = 'bar')\n"
+    "charles_age_room.plot(kind = 'bar')\n",
+    "xticks(no.range[20])\n"
    ]
   },
   {
