Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -759,7 +759,7 @@
     "charles_age_room = near_charles.iloc[:,6:8]\n",
     "charles_age_room.head()\n",
     "charles_age_room.plot(kind = 'bar')\n",
-    "xticks(no.range[20])\n"
+    "xticks(np.range[20])\n"
    ]
   },
   {
