--- a/index.ipynb
+++ b/index.ipynb
@@ -1122,7 +1122,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "age_dis = df.lilo[]"
+   ]
   }
  ],
  "metadata": {
