Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1214,8 +1214,8 @@
     }
    ],
    "source": [
-    "x = age_dis.age()\n",
-    "y = age_dis.loc['dis()"
+    "x = age_dis.loc[age_dis['']]\n",
+    "y = age_dis.loc[age_dis['dis']]"
    ]
   },
   {
