Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1232,7 +1232,7 @@
    ],
    "source": [
     "x = age_dis.loc[age_dis['age']]\n",
-    "y = age_dis.loc[age_dis['dis']]"
+    "y = age_dis.iloc[:]"
    ]
   },
   {
