Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1231,8 +1231,8 @@
     }
    ],
    "source": [
-    "x = age_dis.loc[age_dis['age']]\n",
-    "y = age_dis.iloc[:]"
+    "x = age_dis.ilo\n",
+    "y = age_dis.iloc[,:2]"
    ]
   },
   {
