Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1203,7 +1203,8 @@
    "outputs": [],
    "source": [
     "x = age_dis.iloc[:,:1]\n",
-    "y = age_dis.iloc[: ,1:2]\n"
+    "y = age_dis.iloc[: ,1:2]\n",
+    "plt.plot(x, y)"
    ]
   },
   {
